fix: remove scrollbar from layout

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -5,11 +5,6 @@
     padding: 0;
 }
 
-.unique-layout-wrapper {
-    height: 100vh;
-    position: relative;
-}
-
 .unique-layout {
     font-family: var(--prop-font-family);
     font-size: var(--prop-font-size);
